--- a/templates/index.html
+++ b/templates/index.html
@@ -78,8 +78,7 @@
                 },
                 
                 tooltip: {
-                    crosshairs: true,
-                    shared: true
+                pointFormat: 'rating: <b>{point.y:.1f} /10</b>'
                 },
                 plotOptions: {
                     spline: {
